--- a/groc-basket/src/pages/CartPage.css
+++ b/groc-basket/src/pages/CartPage.css
@@ -1,60 +1,67 @@
 table {
-    margin-top:8px;
-    border: 2px solid;
-    width: 100%;
-    height: 40px;
-  }
-    
-  th {
-    border-bottom: 1px solid black;
-    background-color: gray;
-    color: white;
-  }
-    
-  td {
-    text-align: center;
-    
-  }
-  #qyt{
-    display: flex;
-    gap: 4px;
-   justify-content: center;
-  }
-
-  #btn{
-    margin-left: 38px;
-    color: red;
-    font-weight: 600;
-    
-  }
-   #empty{
-    border: 1px solid greenyellow;
-    margin: 10px;
-    font-weight: 500;
-    color: gray;
-    padding: 15px;
-  } 
-  #conti{
-    display:inline-block;
-    margin-top: 20px;
-  }
-
-  #subtotal{
+  margin-top:8px;
+  border: 2px solid;
+  width: 100%;
+  height: 40px;
+}
   
-  border: 1px solid gray;
-  margin-top: 40px;
-  margin-right: 40px;
-  height: 400px;
-  width: 500px;
-  border-color: rgb(0, 25, 139);
-  padding: 10px;
-  }
-  #subtotal>div{
-    display: flex;
-    justify-content: space-between;
-  }
+th {
+  border-bottom: 1px solid black;
+  background-color: gray;
+  color: white;
+}
   
-  #box{
-    display: flex;
-    justify-content: space-between;
-  }
+td {
+  text-align: center;
+  
+}
+#qyt{
+  display: flex;
+  gap: 4px;
+ justify-content: center;
+ align-items: center;
+}
+
+#btn{
+  margin-left: 38px;
+  color: red;
+  font-weight: 600;
+  
+}
+ #empty{
+  border: 1px solid greenyellow;
+  margin: 10px;
+  font-weight: 500;
+  color: gray;
+  padding: 15px;
+  background-color: rgb(22, 22, 78);
+} 
+#conti{
+  display:inline-block;
+  margin-top: 20px;
+}
+
+#subtotal{
+margin-bottom: 20px;
+border: 2px solid gray;
+margin-top: 40px;
+margin-right: 40px;
+height: 300px;
+width: 500px;
+border-color: rgb(0, 25, 139);
+padding: 10px;
+}
+#subtotal>div{
+  display: flex;
+  justify-content: space-between;
+}
+
+#box{
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+#prod{
+  font-size: 18px;
+  font-weight: 500;
+}
