--- a/groc-basket/src/Component/Landingpage/Landing.Module.css
+++ b/groc-basket/src/Component/Landingpage/Landing.Module.css
@@ -25,11 +25,19 @@
    
 }
 .myb2{
+    
+    
+    
+    
+    
+
+
     width: 87%;
-    border: 1px solid black;
-    height: 300px;
+    height: auto;
     margin: auto;
     margin-bottom: 2%;
+    display: flex;
+    justify-content:space-around;
 }
 .bank{
     display: flex;
@@ -159,3 +167,68 @@
 .coffee2{
     display: flex;
 }
+
+
+.box1{
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+    width: 40%;
+    padding: 1rem;
+}
+.boximg1{
+    width: 100%;
+    height: auto;
+}
+.boximg1>img{
+   
+    height: auto;
+}
+.tender{
+    font-family:ProximaNovaA-Regular;
+    font-size: 0.875rem;
+    font-weight: 400;
+    line-height: normal;
+    color:rgb(146, 155, 152);
+   
+    
+}
+.mrs{
+    font-family:ProximaNovaA-Regular;
+    font-size: 0.9rem;
+    font-weight: 200;
+    line-height: normal;
+    
+    color:rgb(51, 51, 51);
+   
+};
+.fresio{
+    font-family:ProximaNovaA-Regular;
+    font-size: 0.6rem;
+    font-weight: 400;
+   
+    line-height: normal;
+    color: rgb(153, 153, 153);
+}
+.stand{
+    font-family:ProximaNovaA-Regular;
+    font-size: 0.675rem;
+    font-weight: 400;
+    line-height: 1rem;
+    color:rgb(51, 51, 51);
+}
+.qty{
+    border: 1px solid black;
+    width: 20%;
+    margin-right: 2%;
+    }
+    .qtyone{
+        border: 1px solid black;
+        width: 30%;
+        text-align: center;
+        margin-right: 2%;
+    }
+    .qtyadd{
+        border: 1px solid black;
+        background-color: #FBF799;
+        width: 30%;
+        margin-right: 2%;
+    }
