--- a/groc-basket/src/pages/CartPage.css
+++ b/groc-basket/src/pages/CartPage.css
@@ -3,6 +3,12 @@ table {
   border: 2px solid;
   width: 100%;
   height: 40px;
+  
+}
+
+.empty_basket{
+  width: 2px;
+  margin-top: 400px;
 }
   
 th {
@@ -18,8 +24,8 @@ td {
 #qyt{
   display: flex;
   gap: 4px;
- justify-content: center;
- align-items: center;
+  justify-content: center;
+  align-items: center;
 }
 
 #btn{
@@ -44,13 +50,14 @@ td {
 #subtotal{
 margin-bottom: 20px;
 border: 2px solid gray;
-margin-top: 40px;
+margin-top: 30px;
 margin-right: 40px;
-height: 300px;
-width: 500px;
+height: 350px;
+width: 800px;
 border-color: rgb(0, 25, 139);
 padding: 10px;
 }
+
 #subtotal>div{
   display: flex;
   justify-content: space-between;
@@ -65,3 +72,6 @@ padding: 10px;
   font-size: 18px;
   font-weight: 500;
 }
+
+
+
