cart css change

--- a/groc-basket/src/pages/CartPage.css
+++ b/groc-basket/src/pages/CartPage.css
@@ -23,9 +23,9 @@ td {
 }
 #qyt{
   display: flex;
-  gap: 4px;
+  gap: 12px;
   justify-content: center;
-  align-items: center;
+  margin-top: 30px;
 }
 
 #btn{
@@ -72,6 +72,3 @@ padding: 10px;
   font-size: 18px;
   font-weight: 500;
 }
-
-
-
