--- a/groc-basket/src/Component/Landingpage/Mybasket.css
+++ b/groc-basket/src/Component/Landingpage/Mybasket.css
@@ -27,3 +27,12 @@
     }
     
 }
+@media (max-width: 500px){
+    .myb2{
+        height: 200%;
+        width: 50%;
+        justify-content: center;
+        justify-content: space-around;
+    }
+
+}
